# zstdBmpCompressor

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  zstdBmpCompressor.cpp  zstdBmpCompressor.h
demo/: CMakeLists.txt  compressworker.cpp  compressworker.h  imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.cpp  mainwindow.h
lib/: zstdBmpCompressor.exp  zstdBmpCompressord.exp
